Handle also application::open

Even if we do our own command line parsing, we still need to implement
open since the dbus method is used when activating files from nautilus.

https://bugzilla.gnome.org/show_bug.cgi?id=734175